fixed flickering issues on page load

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -630,3 +630,7 @@ img {
   display: block;
 }
 
+html.sr .load-hidden {
+  visibility: hidden;
+}
+
